--- a/app/globals.css
+++ b/app/globals.css
@@ -2,32 +2,36 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+@font-face {
+  font-family: nato-sans;
+  src: url(font/NotoSansTC-VariableFont_wght.ttf);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+@font-face {
+  font-family: montserrat;
+  src: url(font/Montserrat-VariableFont_wght.ttf);
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+@font-face {
+  font-family: outfit;
+  src: url(font/Outfit-VariableFont_wght.ttf);
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+@font-face {
+  font-family: impact;
+  src: url(font/Outfit-VariableFont_wght.ttf);
+}
+
+.font-impact {
+  font-family: impact;
+}
+
+.font-nato-sans {
+  font-family: nato-sans;
+}
+.font-montserrat {
+  font-family: montserrat;
+}
+.font-outfit {
+  font-family: outfit;
 }
